--- a/ensemble/model_analysis.ipynb
+++ b/ensemble/model_analysis.ipynb
@@ -21,7 +21,7 @@
     "    'AE_SWA_large',\n",
     "    'ALS_ensemble',\n",
     "    'NCF_dist_exp_SWA',\n",
-    "    'SVDpp_ensemble_gaussian'\n",
+    "    'SVDpp_ensemble'\n",
     "]"
    ]
   },
@@ -55,11 +55,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                             mean       std\n",
-      "AE_SWA_large             0.983427  0.002613\n",
-      "ALS_ensemble             0.980297  0.002219\n",
-      "NCF_dist_exp_SWA         0.987562  0.002001\n",
-      "SVDpp_ensemble_gaussian  0.973865  0.002502\n"
+      "                      mean       std\n",
+      "AE_SWA_large      0.983427  0.002613\n",
+      "ALS_ensemble      0.980297  0.002219\n",
+      "NCF_dist_exp_SWA  0.987562  0.002001\n",
+      "SVDpp_ensemble    0.973865  0.002502\n"
      ]
     }
    ],
@@ -117,19 +117,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                             mean       std\n",
-      "AE_SWA_large             0.983427  0.002613\n",
-      "ALS_ensemble             0.980297  0.002219\n",
-      "NCF_dist_exp_SWA         0.987562  0.002001\n",
-      "SVDpp_ensemble_gaussian  0.973865  0.002502\n",
-      "Final ensemble           0.970985  0.002393\n"
+      "                      mean       std\n",
+      "AE_SWA_large      0.983427  0.002613\n",
+      "ALS_ensemble      0.980297  0.002219\n",
+      "NCF_dist_exp_SWA  0.987562  0.002001\n",
+      "SVDpp_ensemble    0.973865  0.002502\n",
+      "Final ensemble    0.970985  0.002393\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_179199/1501064865.py:6: FutureWarning: `rcond` parameter will change to the default of machine precision times ``max(M, N)`` where M and N are the input matrix dimensions.\n",
+      "/tmp/ipykernel_180112/1501064865.py:6: FutureWarning: `rcond` parameter will change to the default of machine precision times ``max(M, N)`` where M and N are the input matrix dimensions.\n",
       "To use the future default and silence this warning we advise to pass `rcond=None`, to keep using the old, explicitly pass `rcond=-1`.\n",
       "  coeffs = np.linalg.lstsq(val_splits[i], val_truth[i])[0]\n"
      ]
